WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211196
[iOS][WK2] Temporarily stop using RunningBoard for the foreground process assertion
https://bugs.webkit.org/show_bug.cgi?id=211196
Summary
[iOS][WK2] Temporarily stop using RunningBoard for the foreground process ass...
Chris Dumez
Reported
2020-04-29 12:15:18 PDT
Temporarily stop using RunningBoard for the foreground process assertion. On recent iOS builds, there are issues where this assertion can time out after 30 seconds, even though the process is still foreground.
Attachments
Patch
(6.81 KB, patch)
2020-04-29 12:18 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-04-29 12:15:44 PDT
<
rdar://problem/62535822
>
Chris Dumez
Comment 2
2020-04-29 12:18:45 PDT
Created
attachment 397984
[details]
Patch
EWS
Comment 3
2020-04-29 13:16:56 PDT
Committed
r260912
: <
https://trac.webkit.org/changeset/260912
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 397984
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug