[iOS][WK2] Temporarily stop using RunningBoard for the foreground process assertion https://bugs.webkit.org/show_bug.cgi?id=211196 <rdar://problem/62535822>

Reviewed by Tim Horton.

Temporarily stop using RunningBoard for the foreground process assertion. On recent iOS builds, there
are issues where this assertion can time out after 30 seconds, even though the process is still
foreground.

* Configurations/WebKit.xcconfig:
* UIProcess/ProcessAssertion.h:
* UIProcess/ios/ProcessAssertionIOS.mm:
(WebKit::runningBoardNameForAssertionType):
(WebKit::ProcessAssertion::ProcessAssertion):
(WebKit::ProcessAssertion::~ProcessAssertion):


Canonical link: https://commits.webkit.org/224102@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260912 268f45cc-cd09-0410-ab3c-d52691b4dbfc