Source/WebKit/UIProcess/ProcessAssertion.h
@@ -39,9 +39,7 @@
 
 OBJC_CLASS RBSAssertion;
 OBJC_CLASS WKRBSAssertionDelegate;
-#if !HAVE(RUNNINGBOARD_VISIBILITY_ASSERTIONS)
 OBJC_CLASS BKSProcessAssertion;
-#endif
 #endif // PLATFORM(IOS_FAMILY)
 
 namespace WebKit {
@@ -87,9 +85,7 @@ private:
 #if PLATFORM(IOS_FAMILY)
     RetainPtr<RBSAssertion> m_rbsAssertion;
     RetainPtr<WKRBSAssertionDelegate> m_delegate;
-#if !HAVE(RUNNINGBOARD_VISIBILITY_ASSERTIONS)
     RetainPtr<BKSProcessAssertion> m_bksAssertion; // Legacy.
-#endif
     Validity m_validity { Validity::Unset };
 #endif
     Client* m_client { nullptr };
