Source/WebKit/UIProcess/ios/ProcessAssertionIOS.mm
@@ -28,6 +28,7 @@
 
 #if PLATFORM(IOS_FAMILY)
 
+#import "AssertionServicesSPI.h"
 #import "Logging.h"
 #import "RunningBoardServicesSPI.h"
 #import "WebProcessPool.h"
@@ -36,10 +37,6 @@
 #import <wtf/RunLoop.h>
 #import <wtf/Vector.h>
 #import <wtf/WeakHashSet.h>
-
-#if !HAVE(RUNNINGBOARD_VISIBILITY_ASSERTIONS)
-#import "AssertionServicesSPI.h"
-#endif
 
 using WebKit::ProcessAndUIAssertion;
 
@@ -312,7 +309,7 @@ static NSString *runningBoardNameForAssertionType(ProcessAssertionType assertion
     case ProcessAssertionType::UnboundedNetworking:
         return @"UnboundedNetworking";
     case ProcessAssertionType::Foreground:
-        return @"Foreground";
+        return nil; // We are not using RunningBoard for the Foreground assertion yet due to <rdar://problem/62535822>.
     case ProcessAssertionType::DependentProcessLink:
         return @"DependentProcessLink";
     case ProcessAssertionType::MediaPlayback:
@@ -324,8 +321,6 @@ static NSString *runningBoardNameForAssertionType(ProcessAssertionType assertion
     return nil;
 #endif
 }
-
-#if !HAVE(RUNNINGBOARD_VISIBILITY_ASSERTIONS)
 
 const BKSProcessAssertionFlags suspendedTabFlags = (BKSProcessAssertionAllowIdleSleep);
 const BKSProcessAssertionFlags backgroundTabFlags = (BKSProcessAssertionPreventTaskSuspend);
@@ -365,8 +360,6 @@ static BKSProcessAssertionReason toBKSProcessAssertionReason(ProcessAssertionTyp
     }
 }
 
-#endif // !HAVE(RUNNINGBOARD_VISIBILITY_ASSERTIONS)
-
 ProcessAssertion::ProcessAssertion(pid_t pid, const String& reason, ProcessAssertionType assertionType)
     : m_assertionType(assertionType)
     , m_pid(pid)
@@ -374,7 +367,6 @@ ProcessAssertion::ProcessAssertion(pid_t pid, const String& reason, ProcessAsser
     auto weakThis = makeWeakPtr(*this);
     NSString *runningBoardAssertionName = runningBoardNameForAssertionType(assertionType);
 
-#if !HAVE(RUNNINGBOARD_VISIBILITY_ASSERTIONS)
     if (!runningBoardAssertionName) {
         // Legacy code path.
         BKSProcessAssertionAcquisitionHandler handler = ^(BOOL acquired) {
@@ -399,7 +391,6 @@ ProcessAssertion::ProcessAssertion(pid_t pid, const String& reason, ProcessAsser
         };
         return;
     }
-#endif // !HAVE(RUNNINGBOARD_VISIBILITY_ASSERTIONS)
 
     ASSERT(runningBoardAssertionName);
     if (!pid) {
@@ -440,12 +431,10 @@ ProcessAssertion::~ProcessAssertion()
         [m_rbsAssertion invalidate];
     }
 
-#if !HAVE(RUNNINGBOARD_VISIBILITY_ASSERTIONS)
     if (m_bksAssertion) {
         m_bksAssertion.get().invalidationHandler = nil;
         [m_bksAssertion invalidate];
     }
-#endif
 }
 
 void ProcessAssertion::processAssertionWasInvalidated()
